<resources>
    <string name="app_name">RGBStripControlArduino</string>
    <string name="action_settings">Settings</string>

    <string name="color_code">#123456</string>
    <string name="btn_OK">OK</string>
    <string name="github_page">My github page: \n https://github.com/Valentin-Golyonko</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices…</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="menu_about">About</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_connect">Connect</string>
    <string name="cv_seekBar_100">Brightness 70%</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving App.</string>
    <string name="btn_OFF">OFF</string>
    <string name="btn_ON">ON</string>
    <string name="set_alarm">Set alarm:</string>
    <string name="day_mon">M</string>
    <string name="day_tue">T</string>
    <string name="day_wed">W</string>
    <string name="day_fri">F</string>
    <string name="day_thu">T</string>
    <string name="day_sat">S</string>
    <string name="day_sun">S</string>
    <string name="time_hint_h">06</string>
    <string name="time_hint_m">30</string>
    <string name="alarm_set">Set</string>
    <string name="alarm_off">OFF</string>
    <string name="auto_brightness">Auto Brightness:</string>

</resources>
