<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rgb_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="56dp"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/cv_previewColor"
        style="@style/my"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_gravity="center_horizontal"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="1dp">

        <TextView
            android:id="@+id/colorPickerTv"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/color_code"
            android:textColor="@color/textColorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        style="@style/my"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="1dp">

        <com.skydoves.colorpickerview.ColorPickerView
            android:id="@+id/colorPickerView"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_margin="4dp"
            app:palette="@drawable/palette"
            app:selector="@drawable/wheel" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cv_seek_bar"
        style="@style/my"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:clickable="true"
        android:focusable="true"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/seek_bar_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/textColorPrimary" />

            <SeekBar
                android:id="@+id/seekBar_rgb"
                style="@style/my"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cv_btn_ok"
        style="@style/my"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/rgb_btn_ON"
                android:background="@color/colorTextIcons"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/btn_ON"
                android:textColor="@color/textColorPrimary"
                android:textSize="18sp" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/rgb_btn_OFF"
                android:background="@color/colorTextIcons"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/btn_OFF"
                android:textColor="@color/textColorPrimary"
                android:textSize="18sp" />

        </LinearLayout>


    </android.support.v7.widget.CardView>

</LinearLayout>